@startuml

!define LIGHTBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

class DynamicObstacleListener {
        -body_received_ : bool
        -ready_to_continue_ : bool
        -paused_ : bool

        -backOff_ : bool
        -human_dist_decrease_ : bool
        -body_not_received_count_ : int
        -pxl_lknee_x_ : int
        -pxl_lknee_y_ : int

        -navigationManager_ : NavigationManager

        -lfeNavLogger_ : LfeNavLogger
        -human_robot_distance_ : double
        -current_robot_vel_ : double
        -human_dist_seq_ : vector<double>
        -human_dist_time_seq_ : vector<double>
        -robot_vel_seq_ : vector<double>
        -human_mc_dist_seq_ : vector<double>
        -human_mc_dist_time_seq_ : vector<double>

        -cfg_ : LfeNavConfig
        -reconfigure_server_ : shared_ptr<ReconfigureServer>
        -config_init_ : bool
        -avg_img_depth_seq_ : vector<double>

        -setMotionCue() : void
        -subscriberLoop() : void
        -loop() : void
        -newBodyMsgCallback() : void
        -newVelocityCallback() : void
        -newDepthCallback() : void
        -configCb() : void
        -executeMotionCue() : void
}

class NavigationManager{

        +sendGoal() : void
        +stopGoal() : void
        +backOff() : void
        +continueGoal() : void

        +setGoal1() : void
        +setGoal2() : void
        +setGoal3() : void

        -count_ : int
        -paused_ : bool
        -sendingGoal_ : bool
        -pub_vel_bo_ : Publisher

        -ac_ : MoveBaseClient
        -goal1_ : MoveBaseGoal
        -goal2_ : MoveBaseGoal
        -goal3_ : MoveBaseGoal

}

class LfeNavLogger{
    +bo_log_init() : void
    +st_log_init() : void
    +finalize_log() : void

    -bo_log_msg_ : BOLogMsg
    -st_log_msg_ : STLogMsg

    -bo_id_counter_ : int
    -st_id_counter_ : int
    -total_duration_start_ : Time
    -total_duration_end_ : Time

    -nh_ : NodeHandle
    -pub_bo_log_ : Publisher
    -pub_st_log_ : Publisher

    -listener_ : TransformListener
    -tf_ : StampedTransform

}

class LfeNavConfig{
 +navigation : Navigation
 +hri : HumanRobotInteraction
 +backOff : BackOff

 +loadRosParamFromNodeHandle() : void
 +reconfigure() : void
}

class Navigation {
    goal1_pos_x : double
    goal1_pos_y : double
    goal1_pos_z : double
    goal1_orientation : double
    goal2_pos_x : double
    goal2_pos_y : double
    goal2_pos_z : double
    goal2_orientation : double
    goal3_pos_x : double
    goal3_pos_y : double
    goal3_pos_z : double
    goal3_orientation : double
}

class HumanRobotInteraction {
    backOff : bool
    wait_duration : int
    motion_cue_distance : double
    human_motion_frame_distance : int
}

class BackOff {
    back_velocity : double
    back_duration : double
}

Navigation <-- LfeNavConfig
HumanRobotInteraction <-- LfeNavConfig
BackOff <-- LfeNavConfig
LfeNavConfig <-- DynamicObstacleListener
NavigationManager <-- DynamicObstacleListener
LfeNavLogger <-- DynamicObstacleListener


@enduml